--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,13 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
-  password: 1234
+  password: sunday_4U
 
 development:
   <<: *default
   database: blog_app_development
+  username: postgres
+  password: sunday_4U
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -84,5 +86,5 @@ test:
 production:
   <<: *default
   database: blog_app_production
-  username: blog_app
-  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
+  username: postgres
+  password: sunday_4U
