--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
-  password: sunday_4U
 
 development:
   <<: *default
-  database: blog_app_development
+  database: new_blog_development
   username: postgres
   password: sunday_4U
 
@@ -33,7 +31,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: blog_app
+  #username: blog
 
   # The password associated with the postgres role (username).
   #password:
@@ -61,7 +59,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_app_test
+  database: new_blog_test
+  username: postgres
+  password: sunday_4U
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_app_production
+  database: new_blog_production
   username: postgres
   password: sunday_4U
