--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: new_blog_development
-  username: postgres
-  password: sunday_4U
+  username: lana
+  password: 123
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: new_blog_test
-  username: postgres
-  password: sunday_4U
+  username: lana
+  password: 123
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -86,5 +86,5 @@ test:
 production:
   <<: *default
   database: new_blog_production
-  username: postgres
-  password: sunday_4U
+  username: lana
+  password: 123
